crates/djls-semantic/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__navigation.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "netbox.utilities.templatetags.navigation::tag::nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
filter_arities: {}
block_specs: {}
